--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+         {
+          "type": "rdbg",
+          "name": "Attach with rdbg local (Port 12345)",
+          "request": "attach",
+          "debugPort": "localhost:12345",
+          "localfsMap": "/usr/src/app:${workspaceFolder}"
+        },
         {
             "type": "ruby_lsp",
             "name": "Debug script",
