--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "app",
-  "private": true,
-  "scripts": {
-    "build": "bun bun.config.js"
-  },
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.12"
   },
   "devDependencies": {
-    "@types/bun": "^1.1.14"
-  }
+    "@eslint/js": "^9.17.0",
+    "@stylistic/eslint-plugin": "^2.12.1",
+    "@types/bun": "latest",
+    "@types/eslint__js": "^8.42.3",
+    "eslint": "^9.17.0"
+  },
+  "private": true,
+  "scripts": {
+    "build": "bun bun.config.js"
+  },
+  "type": "module"
 }
