--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "app",
   "dependencies": {
-    "@hotwired/turbo-rails": "^8.0.12"
+    "@hotwired/turbo-rails": "^8.0.12",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@stylistic/eslint-plugin": "^2.12.1",
     "@types/bun": "latest",
     "@types/eslint__js": "^8.42.3",
+    "@types/react": "^19.0.4",
+    "@types/react-dom": "^19.0.2",
     "eslint": "^9.17.0",
     "typescript-eslint": "^8.19.1"
   },
