--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "dependencies": {
     "@hotwired/turbo-rails": "^8.0.12",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
