Precompile assets in CI testing since we're using request specs now

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,6 +94,9 @@ jobs:
           # REDIS_URL: redis://localhost:6379/0
         run: bin/rails db:create db:schema:load
 
+      - name: Precompile assets
+        run: bundle exec rails assets:precompile
+
       - name: Run specs with RSpec
         env:
           RAILS_ENV: test
