--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@happy-dom/global-registrator": "^17.4.7",
+    "@jest/globals": "^29.7.0",
     "@stylistic/eslint-plugin": "^2.12.1",
+    "@testing-library/react": "^16.3.0",
     "@types/bun": "latest",
     "@types/eslint__js": "^8.42.3",
     "@types/react": "^19.0.4",
