--- a/compose.yaml
+++ b/compose.yaml
@@ -14,6 +14,7 @@ services:
     environment:
       - HISTFILE=/usr/src/app/log/.bash_history
       - REDIS_URL=redis://default:${REDIS_PASSWORD}@redis:6379/1
+      - REDIS_TEST_URL=redis://default:${REDIS_PASSWORD}@redis_test:6379/1
     depends_on:
       db:
         condition: service_healthy
@@ -40,6 +41,14 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
+    command: redis-server --requirepass ${REDIS_PASSWORD} --protected-mode yes
+    networks:
+      - internal_network
+
+  redis_test:
+    image: redis:alpine
+    ports:
+      - "6380:6379"
     command: redis-server --requirepass ${REDIS_PASSWORD} --protected-mode yes
     networks:
       - internal_network
